--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -2,8 +2,12 @@ name: Terraform ALB ASG Deployment
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   workflow_dispatch:
+
+permissions:
+  contents: read
 
 jobs:
   terraform:
@@ -14,16 +18,27 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
 
-    steps:
-      - uses: actions/checkout@v4
+    defaults:
+      run:
+        working-directory: terraform   # 🔥 THIS IS THE KEY FIX
 
-      - uses: hashicorp/setup-terraform@v3
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.6.6
 
-      - run: terraform init
-      - run: terraform validate
-      - run: terraform plan
-        working-directory: terraform
-        
-      - run: terraform apply -auto-approve
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Validate
+        run: terraform validate
+
+      - name: Terraform Plan
+        run: terraform plan
+
+      - name: Terraform Apply
+        run: terraform apply -auto-approve
